--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,9 @@
+implement purple checker
+implement dialog for getting wrong colour
+happy/sad paintbrush?
+
+
+
 Better animations for scene transitions
     - When you return after unlocking a scene its just there, want to show it appearing once you return to the nav
     - Animation when hovering over a scene in nav-view
