--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,7 @@
 happy/sad paintbrush?
 
 
-placeholder images for rooms
-too easy to double click and leave a room when you're trying to leave a scene
-    - this makes it look like the scene is occupying the whole room / there are no other Scenes
-        - either move the "leave scene" button somewhere else
-        - or disable the "leave room" button as soon as you open a scene
-
+placeholder images for other room
 
 
 Better animations for scene transitions
