--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,14 @@
 happy/sad paintbrush?
 
+still a lot of overlap in the render methods of room1 and room2. Can we move this out somehow?
+- Whats the same between them  
+    - footer ( though theres a condition in room1);
+    - Nav and its props
+
+- whats different
+    - Scenes 
+    className (could be calculated above)
+
 
 placeholder images for other room
 
